other/record-creation-details/.chainsaw-test/ns-patched.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kyverno.io/created-by: (($minorversion < `29` && '{"groups":["system:masters","system:authenticated"],"username":"kubernetes-admin"}') || '{"groups":["kubeadm:cluster-admins","system:authenticated"],"username":"kubernetes-admin"}')
  name: record-create-ns
