other/record-creation-details/.chainsaw-test/pod-patch01.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kyverno.io/created-by: '{"groups":["system:masters","system:authenticated"],"username":"not-kubernetes-admin"}'
  name: pod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
