other/record-creation-details/.chainsaw-test/pod-patch02.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kyverno.io/created-by: ""
  name: pod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
