other/record-creation-details/.chainsaw-test/pod-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    # If the minor version of the Kubernetes cluster against which this
    # is tested is less than 29, the annotation is expected to have the group 'system:masters' in it.
    # Otherwise, due to a change in kubeadm, the group should be 'kubeadm:cluster-admins'.
    # Note the values expected here are specific to testing on a KinD cluster. Testing against
    # other types of clusters may result in different values.
    kyverno.io/created-by: (($minorversion < `29` && '{"groups":["system:masters","system:authenticated"],"username":"kubernetes-admin"}') || '{"groups":["kubeadm:cluster-admins","system:authenticated"],"username":"kubernetes-admin"}')
  name: pod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
