other/record-creation-details/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: record-creation-details
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
