other/record-creation-details/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: record-creation-details
spec:
  bindings:
  - name: version
    value: ($values.kubeVersion)
  - name: minorversion
    value: (to_number(split($values.version,'.')[1]))
  steps:
  - name: step-01
    try:
    - apply:
        file: ../record-creation-details.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: pod-patched.yaml
    - assert:
        file: ns-patched.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-patch01.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-patch02.yaml
    - script:
        content: |
          if kubectl annotate namespace record-create-ns kyverno.io/created-by-; then exit 1; exit 0; fi
